Fix: No result message changed. Alignment changed.

--- a/src/components/Events/Event.css
+++ b/src/components/Events/Event.css
@@ -1,10 +1,13 @@
 .footlightSearchWidget .container {
+  all: unset;
   display: flex;
   align-items: flex-start;
   padding: 10px 0px 10px 24px;
   margin-right: 16px;
   min-height: 55px;
   cursor: pointer;
+  width: calc(100% - 16px);
+  max-width: none;
 }
 
 .footlightSearchWidget .container:hover {
